--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/main.css" rel="stylesheet">
-    <title>Vercel Starter</title>
+    <title>HTML Starter</title>
   </head>
   <body>
-    <h1>Vercel HTML Starter</h1>
+    <h1>HTML Starter</h1>
     <p>
       Hello World
     </p>
