fix: make url relative

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <base href="/html-starter-vercel/"
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/main.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
     <title>HTML Starter</title>
   </head>
   <body>
@@ -12,6 +12,6 @@
     <p>
       Hello World
     </p>
-    <script src="/main.js" type="module"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
